# course_work_1

./: .env_example  README.md  config.py  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
